@@ -1,3 +1,10 @@
+2002-04-01  Richard Henderson  <rth@redhat.com>
+
+	* elf32-sparc.c (WILL_CALL_FINISH_DYNAMIC_SYMBOL): New.
+	(elf32_sparc_relocate_section): Use it to figure out when to
+	initialize .got entries.
+	* elf64-sparc.c: Similarly.
+
 2002-03-28  Alan Modra  <amodra@bigpond.net.au>
 
 	* aclocal.m4: Regenerate.
